app/public/styles/main.css
/* ... */
.margin-left-25 {
  margin-left: 25px !important;
}
.margin-left-30 {
  margin-left: 30px !important;
}
.margin-top-30 {
  margin-top: 30px !important;
}
.text-align-right {
  text-align: right !important;
}
.text-decoration-underline {
  text-decoration: underline !important;
}
.float-ContentLeft {
  float: left !important;
}
.float-ContentRight {
  float: right !important;
}
.right-float {
  float: right;
}
.width-100 {
  width: 100% !important;
}
.height-100 {
  height: 100% !important;
}
.lower-case {
  text-transform: lowercase !important;
}
.cursor-pointer {
  cursor: pointer;
}
.mouse-pointer {
  cursor: pointer;
}
.text-align-center {
  text-align: center !important;
}
.header-container {
  margin-left: 1px !important;
  border-bottom: 5px solid #0099CC !important;
}
.header-user-icon {
  margin-right: 0px !important;
}
.content-card-meta {
  background: rgba(0, 0, 0, 0.5) !important;
  color: #FFFFFF !important;
  padding: 5px !important;
}
.login-form .inline input {
  width: 80% !important;
}
.ui.menu {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin: 0 0 !important;
  margin-right: 0px;
  margin-bottom: 1rem;
  margin-left: 0px;
  font-family: HelveticaNeueLTStd-Lt, Helvetica, Arial, sans-serif;
  background: #FFFFFF linear-gradient(rgba(255, 255, 255, 0.05), rgba(0, 0, 0, 0.05));
  font-weight: 400;
  border: 1px solid rgba(0, 0, 0, 0.13);
  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.13);
  border-radius: .2307em;
  min-height: 3em;
  -webkit-box-pack: center !important;
      -ms-flex-pack: center !important;
          justify-content: center !important;
}
.padding-top-circular-human-icon {
  padding-top: 0.9rem !important;
}
.loginForm {
  padding-bottom: 40px;
}
.alarm-icon-header {
  padding-top: 1.5rem !important;
  margin: auto !important;
}
.header-search-filters-divider {
  margin-top: 0px !important;
  border-color: transparent;
  border-width: 0px !important;
}
.header-filter-container {
  background-color: #FFFFFF;
}
/*loged in user icon*/
.logged-in-user {
  width: 30px !important;
  height: 30px !important;
  margin-top: 2px !important;
  border-radius: 50% !important;
  -webkit-border-radius: 50% !important;
  -moz-border-radius: 50% !important;
  -ms-border-radius: 50% !important;
  -o-border-radius: 50% !important;
  display: inline-block !important;
  vertical-align: middle !important;
}
/*login form */
.login-modal-text-align {
  text-align: center;
  -ms-flex-item-align: center;
      align-self: center;
}
.login-modal-title {
  color: #333333 !important;
  font-size: 1.5625em !important;
  font-family: "FrutigerSerifLTW01-Medi 722257" !important;
}
.login-modal-label-title {
  color: #333333 !important;
  font-size: 1.25em !important;
  font-family: "FrutigerSerifLTW01-Medi 722257" !important;
}
.beforelogin.ui.secondary.pointing.menu {
  border-bottom: 0;
}
.header-user-container {
  float: right !important;
}
/*close button css in sign in page */
.signInPopUp {
  background: #FFFFFF !important;
  border: none;
  padding: 1rem 1rem 0 0 !important;
}
.padding-top-header-large-icons {
  padding-top: 1.5rem;
}
.padding-top-1rem {
  padding-top: 1rem !important;
}
.ui.secondary.pointing.menu .active.item {
  border-color: #0099CC !important;
}
.ui.secondary.pointing.menu {
  background: #fdfdfd !important;
}
.modal .ui.segment {
  box-shadow: none !important;
  border: none!important;
}
.breadcrumppadding.ui.breadcrumb,
.breadcrumppadding.ui.breadcrumb:last-child,
.breadcrumppadding.ui.breadcrumb:first-child {
  margin: 10px;
}
.ui.breadcrumb .divider {
  color: #007AFF !important;
}
.ui.card > .sliderCards.content {
  -webkit-box-flex: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: none;
  border-top: 1px solid rgba(34, 36, 38, 0.1);
  background: 0 0;
  margin: 0;
  padding: 1em 0em !important;
  box-shadow: none;
  font-size: 1em;
  border-radius: 0;
}
.sliderCards.ui.card {
  max-width: 100%;
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 290px;
  min-height: 0;
  background: #fff;
  padding: 0;
  border: none;
  border-radius: .28571429rem;
  box-shadow: 0 0px 0px 0 #d4d4d5, 0 0 0 0px #d4d4d5 !important;
  transition: box-shadow 0.1s ease, -webkit-transform 0.1s ease;
  transition: box-shadow 0.1s ease, transform 0.1s ease;
  z-index: '';
}
.sliderCards.ui.card:hover {
  box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #d4d4d5 !important;
}
.sliderCards.ui.card > .content > .description {
  clear: both;
  color: #b5b5b5 !important;
}
.cardImageText {
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.2);
  color: #FFFFFF;
  width: 100%;
  margin: 0;
  max-height: 70px;
  padding-top: 10px;
  padding-bottom: 10px;
  text-align: center;
}
.rightSideSectionCards.ui.card {
  width: 100% !important;
}
.imageInCardsResponsive {
  overflow: hidden !important;
  height: 150px !important;
}
.sliderCards .ui.mini.rating {
  font-size: 0.78571429em;
  padding-top: 12px;
}
.sliderCards > .description {
  clear: both;
  color: rgba(16, 16, 16, 0.88) !important;
  line-height: 1.5;
}
.content-input {
  display: none;
}
.content-iframe {
  width: 100%;
  height: 700px;
}
.content-video-player-youtube-dimensions.vjs-fluid {
  padding-top: 500px;
}
.content-player-container {
  position: relative;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: #FFFFFF;
}
.content-player-body {
  padding: 0;
}
.content-player {
  position: relative;
  height: 99%;
  width: 99.8%;
}
.content-player iframe {
  min-height: 500px;
}
.player-video {
  width: 100% !important;
  height: 500px !important;
  position: relative;
}
.content-player-header {
  padding: 5px 5px 5px 5px !important;
  border: gray !important;
}
.pdf-viewer {
  padding: 1%;
  position: relative;
  background-color: #FFFFFF;
}
/* ... */

